<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/grnregitrolg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivnombreapp"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/nombrapp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>
    <TextView
        android:id="@+id/tvtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_below="@+id/ivnombreapp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvtitulo"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/etUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuario"
                    android:inputType="textEmailAddress"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/clave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/usuario"
                android:layout_marginTop="15dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/etClave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/clave"
                    android:inputType="textPassword"/>


            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/tvOlvidaste"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/clave"
                android:text="@string/olvidaste_contrasena"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"/>

            <Button
                android:id="@+id/btnIngresar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvOlvidaste"
                android:layout_marginTop="15dp"
                android:text="@string/ingresar"
                android:backgroundTint="@color/green"/>

            <TextView
                android:id="@+id/tvRegistrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_cuenta"
                android:layout_below="@+id/btnIngresar"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_centerHorizontal="true"/>


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>